--- a/pragmatic/Dockerfile
+++ b/pragmatic/Dockerfile
@@ -6,7 +6,7 @@ RUN git clone https://github.com/hyunhee-lee/playground.git
 
 WORKDIR /home/pragmatic/pragmatic/
 
-RUN pip install -r /pragmatic/requirements.txt
+RUN pip install -r requirements.txt
 
 RUN echo "SECRET_KEY=django-insecure-11-0&vs@mka9_m_a)di2c5&%%arm-7%o0^98e+iy%53)$!c$2-" > .env
 
