--- a/pragmatic/Dockerfile
+++ b/pragmatic/Dockerfile
@@ -1,10 +1,22 @@
 FROM python:3.9.0
 
+RUN mkdir /root/.ssh/
+
+# 이미지를 가지는 사람은 private key 또한 입수 가능!
+ADD ./.ssh/id_rsa /root/.ssh/id_rsa
+
+RUN chmod 600 /root/.ssh/id_rsa
+
+RUN touch /root/.ssh/known_hosts
+
+RUN ssh-keyscan github.com >> /root/.ssh/known_hosts
+
 WORKDIR /home/
 
 RUN echo "testing4"
 
-RUN git clone https://github.com/hyunhee-lee/playground.git
+# RUN git clone https://github.com/hyunhee-lee/playground.git
+RUN git clone git@github.com:hyunhee-lee/playground.git
 
 WORKDIR /home/playground/pragmatic/
 
